# tic-tac-toe

./: AUTHORS.rst  LICENSE  README.rst  RELEASE_NOTES.rst  pyproject.toml  tic_tac_toe.py
ui/: endgame.ui  tictactoe.ui
